<resources>
    <string name="app_name">BAC Calculator</string>
    <string name="sober_up_button_text">SOBER UP!</string>
    <string name="pacer_button_text">PACER</string>
    <string name="resources_button_text">Resources</string>
    <string name="about_us_button_text">About Us</string>
    <string name="disclaimer_text">DISCLAIMER: This app gives only an approximate value for the BAC. Please be careful when you drink. The creators of this app do not condone underage drinking.</string>

    <string name="instructions_text_view">Select Sober Up! to estimate time needed to sober up. Select Pacer to pace your drinking.</string>
    <string name="page_name_1">Sober Up!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="FK">Fuck Karan</string>
    <string name="weight">Enter your Weight</string>
    <string name="Gender">Select your gender:</string>
    <string name="about_us_1">The BUzztracker group comprises of Karanraj Chauhan, Rijish Ganguly, Rahul Jain, Anand Sanmukhani and Anirudh Sriram. \n\nWe are a group of Sophomore and Junior students majoring in Computer Engineering and this app was the final project
for our Introduction to Software Engineering class under the supervision of Professor Douglas Densmore.\n\nHope you enjoy using our App and \nhope you stay safe!</string>
</resources>
